--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-light bg-dark w-100">
-    <a href="/login" type="button" class="btn btn-primary mr-auto">Iniciar Sesión</a>
+<nav class="navbar navbar-light bg-light w-100">
+    <a href="/login" type="button" class="btn btn-primary py-2 px-4 ml-auto btn-rounded">Iniciar Sesión</a>
 </nav>
