cambios menores en templates y archivos de carpeta static

--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -1,55 +1,290 @@
-/* CSS General */
+/*--------------------------------------------------------------
+    Import fonts
+--------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:100,200,300,400,500,600,700,800,900|Nunito:200,300,400,600,700,800,900|Raleway:100,200,300,400,400i,500,600,700,800,900&display=swap');
+
+/*--------------------------------------------------------------
+    Root variables
+--------------------------------------------------------------*/
+:root {
+    /*Pallete*/
+    --color-1:#6059f7;
+    --color-2: #6592fe;
+    --color-3:#5143de;
+    --color-4: #1d252d;
+    --color-5:#3d5265;
+    /*White*/
+    --white-1: #fff;
+    --white-2: #fbfbfb;
+    --white-3: #eee;
+    --white-4: #d8d8d8;
+    /*Black*/
+    --black-1: #464646;
+    --black-2: #575757;
+    --black-3: rgb(132, 142, 156);
+    --black-4: #979797;
+    /*Link*/
+    --link: #3e64ff;
+    --link-dark: #1d41d1;
+    /*Notation*/
+    --primary: #3d87ff;
+    --primary-dark: #251f87;
+    --secondary: #3d30ba;
+    --secondary-dark: #3428a7;
+    --info: #29cae4;
+    --info-dark: #20b8d1;
+    --light: #ddd;
+    --light-dark: #b8c4d6;
+    --success: #00c851;
+    --success-dark: #007e33;
+    --warning: #ffbb33;
+    --warning-dark: #ff8800;
+    --danger: #ff4444;
+    --danger-dark: #cc0000;
+    /*Transition*/
+    --base-transition: 0.09s all !important;
+    /*Fonts*/
+    --font-1: 'Raleway', sans-serif;
+    --font-2: 'Nunito', sans-serif;
+    --font-3: 'Lato', sans-serif;
+    --font-4: 'Montserrat', sans-serif;
+}
+
+/*--------------------------------------------------------------
+    General
+--------------------------------------------------------------*/
+* {
+    color: var(--black-1);
+}
 body {
-    height: 100vh;
+    background: #f9f9f9;
 }
-h1,h2,h3,h4,h5,h6,p,a,.menuItem {
-    color: #404040;
+.hide { 
+    max-width: 0 !important;
+    max-height: 0 !important;
 }
-.card-radius-16 {
-    border-radius: 16px !important;
+.display-n { display: none !important;}
+.display-b { display: block !important;}
+.overflow-h { overflow: hidden !important; }
+.no-shadow { box-shadow: none !important; }
+.cursor-p { cursor: pointer !important; }
+.cursor-d { cursor: default !important; }
+.cursor-na { cursor: not-allowed !important; }
+.br-0 { border-radius: 0 !important; }
+.uns {
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
 }
-.btn-rounded {
-    border-radius: 50px !important;
-}
-.br-0 {
-    border-radius: 0 !important;
-}
-.no-shadow {
-    box-shadow: none !important;
-}
-.back-card {
-    padding: 0 !important;
-    background: rgba(255,255,255,0.2);
-}
-.cursor-p {
-    cursor: pointer !important;
-}
-.cursor-d {
-    cursor: default !important;
-}
-.card {
-    box-shadow: 0 .07em .125em 0 rgba(0,0,0,.15) !important;
-}
+.opacity-1:hover { opacity: 0.7 !important;}
+.opacity-2:hover { opacity: 0.5 !important;}
+.opacity-3:hover { opacity: 0.4 !important;}
+
 .inner-shadow-1 {
     -webkit-box-shadow: inset 0px 0px 20px 8px rgba(112,112,112,0.2);
     -moz-box-shadow: inset 0px 0px 20px 8px rgba(112,112,112,0.2);
     box-shadow: inset 0px 0px 20px 8px rgba(112,112,112,0.2);
 }
-.uns {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+
+/*--------------------------------------------------------------
+    Text
+--------------------------------------------------------------*/
+h1 { font-size: 32px; }
+h2 { font-size: 26px; }
+h3 { font-size: 23px; }
+h4 { font-size: 21px; }
+h5 { font-size: 19px; }
+h6 { font-size: 18px; }
+p { font-size: 16px; }
+h1, h2, h3, h4, h5, h6, p {
+    font-family: var(--font-2);
+    font-weight: 200;
+    color: var(--black-1);
 }
-.ho-7 {
-    transition: 0.1s all;
-} 
-.ho-7:hover {
-    opacity: 0.7;
+a {
+    transition: 0.08s all !important;
+    color: var(--link);
 }
-/* Pagina de login */
+a:hover {
+    color: var(--link-dark);
+    text-decoration: none;
+}
+.font-1 { font-family: var(--font-1); }
+.font-2 { font-family: var(--font-2); }
+.font-3 { font-family: var(--font-3); }
+.font-4 { font-family: var(--font-4); }
+
+/*--------------------------------------------------------------
+    Buttons
+--------------------------------------------------------------*/
+.btn {
+    margin: 0px !important;
+    font-family: var(--font-3) !important;
+    font-weight: 500;
+    font-size: 12.5px;
+    padding: 10px 20px;
+    border: 0 none;
+    box-shadow: 0 .07em .125em 0 rgba(0,0,0,.15) !important;
+}
+.btn i {
+    color: inherit !important;
+}
+.btn:hover {
+    opacity: 0.9 !important;
+}
+    /* Rounded */
+.btn-rounded {
+    border-radius: 50px !important;
+}
+    /* Colors */
+.btn-primary {
+    background-color: var(--primary) !important;
+}
+.btn-primary-dark {
+    background-color: var(--primary-dark) !important;
+}
+.btn-secondary {
+    background-color: var(--secondary) !important;
+}
+.btn-secondary-dark {
+    background-color: var(--secondary-dark) !important;
+}
+.btn-info {
+    background-color: var(--info) !important;
+}
+.btn-info-dark {
+    background-color: var(--info-dark) !important;
+}
+.btn-light {
+    background-color: var(--light) !important;
+}
+.btn-light-dark {
+    background-color: var(--light-dark) !important;
+}
+.btn-success {
+    background-color: var(--success) !important;
+}
+.btn-success-dark {
+    background-color: var(--success-dark) !important;
+}
+.btn-warning {
+    background-color: var(--warning) !important;
+}
+.btn-warning-dark {
+    background-color: var(--warning-dark) !important;
+}
+.btn-danger {
+    background-color: var(--danger) !important;
+}
+.btn-danger-dark {
+    background-color: var(--danger-dark) !important;
+}
+
+/*--------------------------------------------------------------
+    Icons
+--------------------------------------------------------------*/
+.icon-sm { font-size: 1.2em !important; }
+.icon-md { font-size: 1.5em !important; }
+.icon-lg { font-size: 1.9em !important; }
+
+/*--------------------------------------------------------------
+    Colors
+--------------------------------------------------------------*/
+.color1 { color: var(--color-1) !important;}
+.color2 { color: var(--color-2) !important;}
+.color3 { color: var(--color-3) !important;}
+.color4 { color: var(--color-4) !important;}
+.color5 { color: var(--color-5) !important;}
+
+.white1 { color: var(--white-1) !important; }
+.white2 { color: var(--white-2) !important; }
+.white3 { color: var(--white-3) !important; }
+.white4 { color: var(--white-4) !important; }
+
+.black1 { color: var(--black-1) !important; }
+.black2 { color: var(--black-2) !important; }
+.black3 { color: var(--black-3) !important; }
+.black4 { color: var(--black-4) !important; }
+
+.primary { color: var(--primary) !important; }
+.primary-dark { color: var(--primary-dark) !important; }
+
+.secondary { color: var(--secondary) !important; }
+.secondary-dark { color: var(--secondary-dark) !important; }
+
+.info { color: var(--info) !important; }
+.info-dark { color: var(--info-dark) !important; }
+
+.light { color: var(--light) !important; }
+.light-dark { color: var(--light-dark) !important; }
+
+.success { color: var(--success) !important; }
+.success-dark { color: var(--success-dark) !important; }
+
+.warning { color: var(--warning) !important; }
+.warning-dark { color: var(--warning-dark) !important; }
+
+.danger { color: var(--danger) !important; }
+.danger-dark { color: var(--danger-dark) !important; }
+
+/*--------------------------------------------------------------
+    Background Colors
+--------------------------------------------------------------*/
+.bg-color1 { background: var(--color-1) !important;}
+.bg-color2 { background: var(--color-2) !important;}
+.bg-color3 { background: var(--color-3) !important;}
+.bg-color4 { background: var(--color-4) !important;}
+.bg-color5 { background: var(--color-5) !important;}
+
+.bg-white1 { background: var(--white-1) !important; }
+.bg-white2 { background: var(--white-2) !important; }
+.bg-white3 { background: var(--white-3) !important; }
+.bg-white4 { background: var(--white-4) !important; }
+
+.bg-black1 { background: var(--black-1) !important; }
+.bg-black2 { background: var(--black-2) !important; }
+.bg-black3 { background: var(--black-3) !important; }
+.bg-black4 { background: var(--black-4) !important; }
+
+.bg-primary { background: var(--primary) !important; }
+.bg-primary-dark { background: var(--primary-dark) !important; }
+
+.bg-secondary { background: var(--secondary) !important; }
+.bg-secondary-dark { background: var(--secondary-dark) !important; }
+
+.bg-info { background: var(--info) !important; }
+.bg-info-dark { background: var(--info-dark) !important; }
+
+.bg-light { background: var(--light) !important; }
+.bg-light-dark { background: var(--light-dark) !important; }
+
+.bg-success { background: var(--success) !important; }
+.bg-success-dark { background: var(--success-dark) !important; }
+
+.bg-warning { background: var(--warning) !important; }
+.bg-warning-dark { background: var(--warning-dark) !important; }
+
+.bg-danger { background: var(--danger) !important; }
+.bg-danger-dark { background: var(--danger-dark) !important; }
+
+/*--------------------------------------------------------------
+    Cards
+--------------------------------------------------------------*/
+.card {
+    border-radius: 3px;
+    border: 0 none !important;
+    box-shadow: 0 .07em .125em 0 rgba(0,0,0,.15);
+}
+.card-radius-16 {
+    border-radius: 16px !important;
+}
+
+/*--------------------------------------------------------------
+    Página de login
+--------------------------------------------------------------*/
 .login-main {
     background: #134153;
     height: 100vh;
@@ -91,7 +326,7 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
         margin: 120px auto !important;
     }
     .back-card {
-        margin: 10em auto 0 auto;
+        margin: 6em auto 0 auto;
     }
 }
 
@@ -108,9 +343,10 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
     padding: 40px !important;
 }
 .login-header h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: lighter;
-    font-size: 29px;
+    font-family: var(--font-2);
+    font-weight: 400;
+    font-size: 30px;
+    color: var(--black-1) !important;
 }
 .login-body {
     padding: 20px;
@@ -126,7 +362,22 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
     border-radius: 8px;
 }
 
-/* Panel Docente */
+/*--------------------------------------------------------------
+    Panel de docente
+--------------------------------------------------------------*/
+.panel nav .nav-link {
+    color: var(--black-1);
+    font-weight: 400;
+    font-family: var(--font-2);
+    font-size: 16;
+}
+#panel-menu, #panel-menu-inner, .panel-content, #panel-toggle {
+    transition: 0.3s all;
+}
+#panel-menu {
+    background: var(--primary-dark);
+    z-index: 10000;
+}
 .navbar-static-top {
   margin-bottom: 0px;
 }
@@ -144,6 +395,7 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
 }
 .panel-menu {
     border-top: 0 none !important;
+    height: 100vh;
     border: 1px solid #e5e5e5;
     border-top-right-radius: 0;
     border-top-left-radius: 0;
@@ -162,6 +414,10 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
 }
 .menuItem:active {
 	background: #ddd !important;
+}
+.menuItemActive {
+    background: #ddd;
+    color: var(--black-2);
 }
 .subItem {
 	display: none;
@@ -186,7 +442,10 @@ h1,h2,h3,h4,h5,h6,p,a,.menuItem {
     background: #7ed4c9;
     font-weight: bold;
 }
-/* Interacción de tablas */
+
+/*--------------------------------------------------------------
+    Interacción de tablas del panel de doncente
+--------------------------------------------------------------*/
 th, td {
     padding-bottom: 10px !important;
     padding-top: 10px !important;
