--- a/flaskps/templates/auth/login.html
+++ b/flaskps/templates/auth/login.html
@@ -9,9 +9,9 @@
         <!-- Contenedor principal de login -->
         <div class="container mb-5 pt-5">
             <!-- Row -->
-            <div class="row">
+            <div class="row justify-content-center">
                 <!-- Columna -->
-                <div class="col-md-12">
+                <div class="col-md-11">
                     <!-- Tarjeta de fondo -->
                     <div class="card back-card card-radius">
                         <!-- Contenedor -->
@@ -27,12 +27,12 @@
                                 <!-- Columna de formulario -->
                                 <div class="col-md-6">
                                     <!-- Formulario de inicio de sesión -->
-                                    <form>
+                                    <form action="{{ url_for('auth_authenticate') }}" method="POST">
                                         <!-- Tarjeta de inicio de sesión -->
                                         <div class="card login-card card-radius-16">
                                             <!-- Cabecera de tarjeta -->
                                             <div class="card-header login-header">
-                                                <h1 class="mb-4">Iniciar sesión</h1>
+                                                <h1 class="my-4">Iniciar sesión</h1>
                                             </div>
                                             <!-- Cuerpo de tarjeta -->
                                             <div class="card-body login-body justify-content-center text-center">
@@ -45,7 +45,7 @@
                                                             <div class="input-group-prepend bg-none">
                                                             <div class="input-group-text btn-light"><i class="fas fa-envelope white-text"></i></div>
                                                             </div>
-                                                            <input type="email" class="form-control py-0" id="inlineFormInputGroup" placeholder="Ingrese su email" required>
+                                                            <input type="email" name="email" class="form-control py-0" id="inlineFormInputGroup" placeholder="Ingrese su email" required>
                                                         </div>
                                                     </div>
                                     
@@ -55,25 +55,25 @@
                                                             <div class="input-group-prepend bg-none">
                                                             <div class="input-group-text btn-light"><i class="fas fa-lock white-text"></i></div>
                                                             </div>
-                                                            <input type="password" id="defaultLoginFormPassword" class="form-control py-0"  placeholder="Ingrese su contraseña" required>
+                                                            <input type="password" name="password" id="defaultLoginFormPassword" class="form-control py-0"  placeholder="Ingrese su contraseña" required>
                                                         </div>
                                                     </div>
 
-                                                    <!-- Recordarme -->
+                                                    <!-- Recordarme 
                                                     <div class="col-md-12 pb-4">                                  
                                                         <div class="custom-control custom-checkbox">
                                                             <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
                                                             <label class="custom-control-label" for="defaultLoginFormRemember">Recordarme</label>
                                                         </div>
                                                     </div>
-                                                    <!-- Olvido su contraseña -->
+                                                     Olvido su contraseña
                                                     <div class="col-md-12 pb-4 text">    
                                                         <a href="">¿Olvidó su contraseña?</a>
-                                                    </div>
+                                                    </div-->
 
                                                     <!-- Sign in button -->
-                                                    <div class="col-md-12">
-                                                        <button class="btn btn-rounded btn-new-green white-text" type="submit">Entrar</button>
+                                                    <div class="col-md-12 mt-5">
+                                                        <input class="btn btn-rounded btn-new-green white-text" type="submit" value="Entrar">
                                                     </div>
 
                                                 </div>
@@ -90,9 +90,9 @@
         </div>
         <!-- Enlace al Home principal -->
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 py-4">
-                    <a class="btn btn-back white-text">Volver al inicio principal</a>
+            <div class="row justify-content-center">
+                <div class="col-md-11 py-4">
+                    <a href="/" class="btn btn-back white-text px-3"><i class="fas fa-arrow-left mr-3 white1"></i>Volver al inicio principal</a>
                 </div>
             </div>
         </div>
