--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -1,3 +1,22 @@
-<nav class="navbar navbar-light bg-light w-100">
-    <a href="/login" type="button" class="btn btn-primary py-2 px-4 ml-auto btn-rounded">Iniciar Sesión</a>
+<!--Navbar-->
+<nav class="navbar navbar-expand-lg bg-white navbar-dark">
+    <!-- Navbar brand -->
+    <a class="navbar-brand black3" href="/">Escuela orquesta de berisso</a>
+    <!-- Collapse button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+        aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Collapsible content -->
+    <div class="collapse navbar-collapse" id="basicExampleNav">
+        <!-- Links -->
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a href="/iniciar_sesion" type="button" class="btn btn-primary ml-auto btn-rounded">Iniciar Sesión</a>
+            </li>
+        </ul>
+        <!-- Links -->
+    </div>
+    <!-- Collapsible content -->
 </nav>
+<!--/.Navbar-->
