--- a/flaskps/templates/home/index.html
+++ b/flaskps/templates/home/index.html
@@ -2,9 +2,38 @@
     
     {% block header %}
     <title>Orquesta escuela de berisso</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
     {% endblock %}
     
     {% block content %}
         {% include 'home/login_navbar.html' %}
-        Nuevo home
+
+    <!-- Container -->
+    <div class="home-container bg">
+        <!-- Row-->
+        <div class="row px-5 mx-0 home-row">
+            <div class="col-md-6 px-4">
+                <h1 class="home-title">ESCUELA ORQUESTA BERISSO</h1>
+                <!-- Row -->
+                <div class="row px-0 mx-0 mt-4">
+                    <!-- Col -->
+                    <div class="col-md-8 mx-0 px-0">
+                        <p class="home-text mt-5">
+                            La Orquesta Escuela de Berisso comenzó a funcionar en septiembre del 2005 en el barrio de El Carmen de la localidad de Berisso bajo la dirección del Mtro. Juan Carlos Herrero, orientada especialmente a la atención de chicos en situación de vulnerabilidad socio-cultural.
+                        </p>
+                    </div>
+                    <!-- /.Col -->
+                </div>
+                <!-- /.Row -->
+            </div>
+            <!-- Col-->
+            <div class="col-md-6">
+                
+            </div>
+            <!-- /.Col-->
+        </div>
+        <!-- /.Row -->
+    </div>
+    <!-- /.Container -->
+
     {% endblock %}
