--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -1,18 +1,28 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg bg-white navbar-dark">
+<nav class="main-navbar navbar navbar-expand-lg navbar-dark no-shadow py-5 px-5 fixed-top">
     <!-- Navbar brand -->
-    <a class="navbar-brand black3" href="/">Escuela orquesta de berisso</a>
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+    <a class="navbar-brand black3 px-5" href="/">
+        <img src="{{ url_for('static', filename='img/logo-black.png') }}" class="nav-logo" alt="logo-de-orquesta-escuela-berisso">
+    </a>
+      <!-- Collapse button -->
+    <button class="navbar-toggler black1" type="button" data-toggle="collapse" data-target="#basicExampleNav"
         aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon black1"></span>
     </button>
     <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="basicExampleNav">
+    <div class="collapse navbar-collapse mb-auto" id="basicExampleNav">
         <!-- Links -->
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a href="/iniciar_sesion" type="button" class="btn btn-primary ml-auto btn-rounded">Iniciar Sesión</a>
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item"><a href="/">Programación</a></li>
+            <li class="nav-item"><a href="/">Novedades</a></li>
+            <li class="nav-item"><a href="/">Instrumentos</a></li>
+            <li class="nav-item"><a href="/">Orquestas</a></li>
+        </ul>
+        <!-- Links -->
+        <!-- Links -->
+        <ul class="navbar-nav text-right">
+            <li class="text-right">
+                <a href="/iniciar_sesion" type="button" class="btn btn-light ml-auto btn-rounded black3 px-5">Iniciar Sesión</a>
             </li>
         </ul>
         <!-- Links -->
