--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="main-navbar navbar navbar-expand-lg bg-none navbar-dark no-shadow py-5 px-5 uns fixed-top">
+<nav class="main-navbar navbar navbar-expand-lg navbar-light no-shadow py-5 px-5 uns fixed-top">
     <!-- Navbar brand -->
     <a class="navbar-brand black3 px-5" href="/">
         <img src="{{ url_for('static', filename='img/logo-black.png') }}" class="nav-logo" alt="logo-de-orquesta-escuela-berisso">
