--- a/flaskps/static/css/homepage.css
+++ b/flaskps/static/css/homepage.css
@@ -2,12 +2,12 @@ body, html {
   height: 100% !important;
 }
 
-.bg {
+.home-bg {
   /* The image used */
   background-image: url("../img/homewallpaper.png");
 
   /* Full height */
-  height: 100%;
+  height: 100vh !important;
 
   /* Center and scale the image nicely */
   background-position: center;
