--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -75,6 +75,7 @@
                                             <div class="col-md-6">
                                                 <label>Localidad</label>
                                                 <select name="localidad_id" class="browser-default custom-select" required="1">
+                                                    <option selected disabled>Seleccionar</option>
                                                     {% for localidad in localidades %}
                                                     {% if localidad.id == row.localidad_id %}
                                                     <option value="{{localidad.id}}" selected>{{localidad.nombre}}</option>
