--- a/flaskps/templates/home/index.html
+++ b/flaskps/templates/home/index.html
@@ -9,7 +9,7 @@
         {% include 'home/login_navbar.html' %}
 
     <!-- Container -->
-    <div class="home-container bg">
+    <div class="home-bg">
         <!-- Row-->
         <div class="row px-5 mx-0 home-row">
             <div class="col-md-6 px-4">
