--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -90,37 +90,7 @@
                         <!--/.Alumnos -->
 
                         <!-- Admin -->
-                        <div class="subItem">
-                            <div class="row">
-                                <div class="col-md-3 pt-2">
-                                    <form action="{{ url_for('change_site_status') }}" method="POST">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <h1 class="h5 m-0">Estado del sitio</h1>
-                                            </div>
-                                            <div class="card-body p-4">
-                                                <div class="row">
-                                                    <div class="col-md-12 mb-3">
-                                                        <select name="estado_sitio" class="browser-default custom-select">
-                                                            {% if infositio == 1 %}
-                                                            <option value="0">Inactivo</option>
-                                                            <option value="1" selected>Activo</option>
-                                                            {% else %}
-                                                            <option value="0" selected>Inactivo</option>
-                                                            <option value="1">Activo</option>
-                                                            {% endif %}
-                                                        </select>
-                                                    </div>
-                                                    <div class="col-md-12 text-right">
-                                                        <button type="submit" class="btn btn-info">Guardar</button>                                             
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                        {% include 'auth/panel_components/estado_sitio.html' %}
                         <!--/.Admin -->
                     </div>
                     <!-- /.Container Fluid -->
